style: fix broken styles

--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -30,32 +30,18 @@ html {
 }
 
 .container {
-  max-width: 1392px;
+  max-width: 1192px;
   margin: 0 auto;
   padding: 0 1rem;
 }
 
 body {
+  background-image:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' height='1.5rem' width='600px'><text x='0' y='24' fill='ghostwhite' font-size='1.5rem'>10010101011001101010010101001010110101010110101010100100011010110100101</text></svg>");
   position: relative;
   overflow-x: hidden;
   max-width: 100vw;
   min-height: 100vh;
   padding-top: 7rem;
-}
-
-a,
-a:visited,
-a:hover {
-  color: var(--pri-color-1);
-  text-decoration: none;
-}
-
-a:hover {
-  color: var(--pri-color-1);
-}
-
-p{
-  font-size: 1.25rem;
 }
 
 ul,
@@ -74,24 +60,26 @@ section {
 /* width */
 ::-webkit-scrollbar {
   /* display: none; */
-  width: 5px;
+  width: 8px;
   height: 1px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f3f3f3;
-  border-radius: 10px;
+  margin: 0;
+  padding: 10px;
+  background: #c8defb;
+  border-radius: 1rem;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #ced4e1;
-  border-radius: 10px;
-  height: 10px;
+  background: #7ba7ff;
+  border-radius: 1rem;
+  height: 1rem;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #9acced;
+  opacity: 0.5;
 }
